# side-site

./: .gitignore  3d-sphere-box.cpp  CppApp.cpp  CppApp.sln  CppApp.vcxproj  CppApp.vcxproj.filters  LICENSE  README.md  funk.c  funks.h  gg.py  index.html  index.js  main.cpp  test-streams.cpp  wall-2d-to-3d.cpp
c-cpp/: 3dRaycasting.cpp  3dSliceProjetction.cpp  3dToImage.cpp  Eigen.cpp  algorithms.cpp  c.c  class.cpp  coroutines.cpp  fbyxfinder.cpp  fileworking.cpp  g.cpp  grafics.cpp  helo  intagration.cpp  iterations.cpp  massives.cpp  matrix-vector-multiplying.cpp  nDMassivesSlice.cpp  norm-denorm-m1-p1.cpp  norm.cpp  out.ppm  range_angle_speed.cpp  recasting2d.cpp  reverse.c  shit.cpp  vectors.cpp  yaw-pitch-roll.cpp
cmake-text/: CMakeLists.txt  help.txt  main.cpp
cmake-text/sub-directory-lib/: CmakeLists.txt
docker/cloud-docker/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Dockerfile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cloud-docker.sln  cmake_install.cmake  crow_all.h  main.cpp  out-exe.vcxproj  out-exe.vcxproj.filters
docker/cloud-docker/out-exe.dir/Debug/: out-exe.exe.recipe
docker/cloud-docker/out-exe.dir/Debug/out-exe.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
docker/cloud-docker/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
docker/cloud-docker/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
docker/cloud-docker/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
docker/cloud-docker/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
go/: f.go  (+4 more)
(+110 files in other folders)
